# open-bb

knowledge-base/: README.md
knowledge-base/architecture/: stack-decision.md
knowledge-base/guides/: .gitkeep
knowledge-base/reference/: .gitkeep
knowledge-base/specs/: ofac-scanner-technical-spec.md  (+2 more)
ofac-scanner/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  researcher_snippets.md  test_db.py
ofac-scanner/alembic/: env.py
ofac-scanner/alembic/versions/: .gitkeep  20260105_0403_d6edeab50de2_initial_schema.py
ofac-scanner/src/: debug_health.py  debug_psycopg.py  debug_run.txt  debug_run_2.txt  debug_run_3.txt  debug_run_ascii.txt  debug_url.py  debug_url_mod.py  debug_url_out.txt  debug_url_out_2.txt  log.txt  test_asyncpg_sni.py  test_scraper.py
ofac-scanner/src/ofac_scanner/: __init__.py  config.py  main.py
ofac-scanner/src/ofac_scanner/application/: __init__.py
ofac-scanner/src/ofac_scanner/application/interfaces/: __init__.py  alert_repository.py  event_repository.py  poll_repository.py  scraper.py
ofac-scanner/src/ofac_scanner/application/services/: __init__.py  alert_service.py  event_query_service.py  keyword_matcher.py  polling_service.py
ofac-scanner/src/ofac_scanner/domain/: __init__.py  exceptions.py
ofac-scanner/src/ofac_scanner/domain/entities/: __init__.py  alert.py  ofac_event.py  poll_run.py
ofac-scanner/src/ofac_scanner/domain/value_objects/: __init__.py  confidence_score.py  event_hash.py
ofac-scanner/src/ofac_scanner/infrastructure/: __init__.py
ofac-scanner/src/ofac_scanner/infrastructure/database/: __init__.py  connection.py  models.py
ofac-scanner/src/ofac_scanner/infrastructure/database/repositories/: __init__.py  alert_repository.py  event_repository.py  poll_repository.py
ofac-scanner/src/ofac_scanner/infrastructure/scheduler/: __init__.py  polling_scheduler.py
ofac-scanner/src/ofac_scanner/infrastructure/scrapers/: __init__.py  ofac_scraper.py
ofac-scanner/src/ofac_scanner/presentation/: __init__.py
ofac-scanner/src/ofac_scanner/presentation/api/: __init__.py  app.py  dependencies.py  middleware.py  state.py
ofac-scanner/src/ofac_scanner/presentation/api/routes/: __init__.py  health.py  ofac.py  widgets.py
ofac-scanner/src/ofac_scanner/presentation/openbb/: __init__.py  widgets.json
ofac-scanner/tests/: conftest.py
ofac-scanner/tests/unit/: test_keyword_matcher.py  test_value_objects.py
